# axon-cli

./: .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: auto-release.yml  publish-cli.yml  trigger-tweet.yml
axon/: _fs.py  api.py  cli.py  config.py  display.py  history.py  llm.py  log.py  mining.py  preview.py  providers.py  session.py  theme.py  wallet.py
axon/backends/: __init__.py  base.py  claude_cli.py  codex_cli.py  litellm_backend.py  registry.py  subprocess_base.py
axon/tui/: app.py
cli/: .gitignore
cli/axon/: api.py  cli.py  display.py  llm.py  mining.py  session.py  wallet.py
cli/tests/: test_api_integration.py  test_cli.py  test_config.py  test_display.py  test_session.py
docs/: design4-4.md  design4-5-onchain.md
examples/: task_essay.json  task_fizzbuzz.json  task_pi.json
sandbox/: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
scripts/: gen_release_body.py
server/: .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  pyproject.toml  seed.py  tokenomics.md
server/alembic/: env.py
server/alembic/versions/: 76dcd7de8bd6_initial_schema.py
server/axon_server/: auth.py  config.py  database.py  main.py  models.py  rewards.py  schemas.py  ws.py
server/axon_server/eval/: code_output.py  engine.py  exact_match.py  llm_judge.py  numeric.py  pattern.py  result.py
server/axon_server/routers/: submissions.py  tasks.py  users.py
server/tests/: conftest.py  test_api.py  test_auth.py  test_eval.py  test_eval_engine.py  test_rewards.py  test_schemas.py  test_security.py  test_ws.py
tests/: test_backends.py  test_cli.py  test_config.py  test_display.py  test_gen_release_body.py  test_history.py  test_llm.py  test_publish.py  test_wallet.py
(+11 files in other folders)
