[project]
name = "axonwork"
version = "0.3.1"
description = "Axon mining CLI for the Proof of Useful Work platform"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15.0",
    "httpx>=0.28.0",
    "litellm>=1.60.0",
    "rich>=13.9.0",
    "eth-account>=0.13.0",
    "simple-term-menu>=1.6.0",
]

[project.scripts]
axon = "axon.cli:app"

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["axon*"]
